<resources>

    <string name="app_name" translatable="false">SinGold</string>
    <string name="add_textbox_hint" translatable="false">Add a ToDo item</string>
    <string name="add_button_text">Add</string>
    <string name="service_title" translatable="false">Mobile Apps </string>
    <string name="menu_refresh">Refresh</string>
    <string name="checkbox_text" translatable="false">Item Text</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="login">Login another account</string>
    <string name="sign_up">Sign up to SinGold</string>
    <string name="help">help</string>
    <string name="Finish">Finish</string>
    <string name="First_name">First name</string>
    <string name="Last_name">Last name</string>
    <string name="Username">Username</string>
    <string name="Next">Next</string>
    <string name="Username1">Username</string>
    <string name="Password1">Password</string>
    <string name="Login2">Login</string>
    <string name="Text1">Text</string>
    <string name="help1">recting about the applecation...</string>
    <string name="id">enter your id</string>
    <string name="id1">confirm your id</string>
    <string name="introduction">introduction</string>
    <string name="intro">intro</string>
    <string name="Username2">Username</string>
    <string name="id2">id</string>
    <string name="confirm_id">confirm id</string>
    <string name="id3">id</string>
    <string name="save">save</string>
    <string name="Last_name1">Last name</string>
    <string name="First_name1">First name</string>
    <string name="Family_phone1">Family phone</string>
    <string name="Address1">Address</string>
    <string name="Personal_id1">Personal id</string>
    <string name="Year_of_birth">Year of birth</string>
    <string name="directing">directing</string>
    <string name="details">Details about the patient</string>


    //intro//
    <string name="title_activity_welcome" translatable="false">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Welcome To SinGold!</string>

    <string name="slide_4_title">how is the app work?</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="classical_music">classical music</string>
    <string name="opera">opera</string>
    <string name="classical">classical</string>
    <string name="Israel">Israel</string>
    <string name="army_bands">army bands</string>
    <string name="songs">songs</string>
    <string name="bands">bands</string>
    <string name="classic">classic</string>
    <string name="folk_dance">folk dance</string>
    <string name="languages">languages</string>
    <string name="yiddish">yiddish</string>
    <string name="hebrew">hebrew</string>
    <string name="english">english</string>
    <string name="russian">russian</string>
    <string name="arabic">arabic</string>
    <string name="dance">dance</string>
    <string name="waltz">waltz</string>
    <string name="tango">tango</string>
    <string name="samba">samba</string>
    <string name="jaz">jaz</string>
    <string name="rock">rock</string>
    <string name="pollack">pollack</string>
    <string name="religion">religion</string>
    <string name="chazanout">chazanout</string>
    <string name="from_pray">from pray</string>
    <string name="propnrmts">propnrmts</string>
    <string name="propnents">propnents</string>
    <string name="relaxing">relaxing</string>
    <string name="runnig_water">runnig water</string>
    <string name="insteumental">insteumental</string>
    <string name="country">country</string>
    <string name="answer">answer</string>
    <string name="homemusic">What music did he here in his home?</string>
    <string name="young">What music he listened when he was young?</string>
    <string name="ma7azot">ma7zaot</string>
    <string name="disk">disk</string>
    <string name="favorite_singer">favorite singer</string>
    <string name="weeding_song">weeding song</string>
    <string name="favorite_song">favorite song</string>
    <string name="songs1">songs</string>
    <string name="folk_dances">folk dances</string>
    <string name="Login">login7</string>
    <string name="Login7">Login</string>
    <string name="atLeast3">at least 3</string>
    <string name="UsernameIsAlredyThere">username is already there</string>
    <string name="AtLeast10Number">at least 9 number</string>
    <string name="pleaseAnswerTheQuestion">please answer the question!</string>
    <string name="search">search</string>
    <string name="AtLeast10Numbers">at least 10 numbers</string>
    <string name="enterYourAdress">enter your adress</string>
    <string name="enterYourYearOfBirth">enter your year of birth</string>
    <string name="language">language</string>
    <string name="language1">language</string>
    <string name="City">city</string>
    <string name="r1">religion</string>
    <string name="l1">languages</string>
    <string name="idP">patient id</string>
    <string name="songN">The Song Name</string>
    <string name="singer">Singer</string>
    <string name="link">Link</string>
    <string name="slide_1_desc">That help finding approprite song personlly for every Alzheimer \'s patient.</string>
    <string name="slide_2_desc">According to studies In the field of music history, The most influential music is the music we hear in the time we were teenagers until  the twenties.</string>
    <string name="slide_2_title">" What is the most influential music in our lives?"</string>
    <string name="slide_3_desc">When we   choose music for an  Alzheimer \'s patient, we choose the music he heard in his youth.</string>
    <string name="slide_3_title">what music should we choose for an Alzheimer \'s patient?</string>
    <string name="slide_4_desc">This application is based on the principle of crowds by building a database that stores information about patients diagnosed with appropriate personal music called therapists from across the country. The application provides search engine and find new patients as per minimum for each patient</string>
    <string name="questionaire">Questionaire</string>
    <string name="new_matching">New Matching</string>
    <string name="play_list">Play List</string>
    <string name="eduction">culture</string>
    <string name="culture">culture</string>
    <string name="selelct">Select</string>
    <string name="keep_sign_in">keep signed in</string>
    <string name="wrong_email_password">EMAIL OR PASSWORD WRONG</string>
    <string name="familyphone">Family Phone:</string>
    <string name="pId">Id:</string>
    <string name="firstName">First Name:</string>
    <string name="lastName">Last Name:</string>
    <string name="year_of_birth">Year Of Birth</string>
    <string name="singer_name">Singer</string>
    <string name="music_he_listen_at_home">Music he listen at home</string>
    <string name="music_he_listened_when_he_was_young">Music he listened when he was young</string>
    <string name="logiin_another">anothr acount</string>
    <string name="matching_survey">matching survey</string>
    <string name="patient_details">Patient Details</string>
    <string name="patient_s_playlist">Playlist</string>
    <string name="Questionnaire">Questionnaire</string>
    <string name="personal_id">Personal Id</string>
    <string name="foreign_music">Forien Music</string>
    <string name="type_of_israel_music">Israely Music</string>
    <string name="Play">Play</string>
    <string name="choise">choise</string>
    <string name="choose">choose</string>
    <string name="enterIcon">if you don\'t have any patients enter the icon to add patient</string>
    <string name="addpatient">if you don\'t have a list of patients enter the icon to add patient</string>
    <string name="addpatient2">enter the icon at the bottom to add patient</string>
    <string name="addpatient3">Click on the icon at the bottom to add patient</string>
    <string name="sure">Are you sure want to delete this song?</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="deleteSong">Delete Song</string>
</resources>