<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_question2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.singold.MyActivities.QuestionaireActivity">
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginTop="50dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearlayout2"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        tools:layout_width="match_parent">

        <TextView
            android:text="@string/dance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Q4"
             />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rgQ4"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/waltz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/waltz" />

            <RadioButton
                android:text="@string/tango"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tango" />

            <RadioButton
                android:text="@string/samba"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/samba" />

        </RadioGroup>

        <TextView
            android:text="@string/relaxing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Q7" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgQ7"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/runnig_water"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/runningwater" />

            <RadioButton
                android:text="@string/insteumental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/insteumental" />

        </RadioGroup>


        <TextView
            android:text="@string/foreign_music"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Q5" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rgQ5"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/jaz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jaz" />

            <RadioButton
                android:text="@string/rock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rock" />

            <RadioButton
                android:text="@string/pollack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pollack" />

        </RadioGroup>

        <TextView
            android:text="@string/r1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Q6" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rgQ6"
            android:textDirection="locale"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/chazanout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chazanout" />

            <RadioButton
                android:text="@string/from_pray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fromPray" />

            <RadioButton
                android:text="@string/propnents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/propnents" />

        </RadioGroup>
    </LinearLayout>
</ScrollView>

</RelativeLayout>
