<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_marginTop="50dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <RadioGroup

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/rgQ3language">
                <TextView
                    android:text="@string/languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/Q3"
                    />
                <RadioButton
                    android:text="@string/yiddish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yiddish" />

                <RadioButton
                    android:text="@string/hebrew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/hebrew" />

                <RadioButton
                    android:text="@string/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/english" />

                <RadioButton
                    android:text="@string/russian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/russian" />

                <RadioButton
                    android:text="@string/arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/arabic" />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
        android:id="@+id/languagerapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/language"
            android:hint="@string/language1" />
    </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
        android:id="@+id/yearrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

                <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
                    android:ems="10"
        android:id="@+id/year"
        android:hint="@string/Year_of_birth"
                    android:inputType="number"
                    android:layout_weight="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
        android:paddingTop="0dp"
        android:id="@+id/cityrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/religin"
        android:hint="@string/religion" />
    </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
        android:id="@+id/countryrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/country"
        android:hint="@string/country" />
    </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etCultutre"
                    android:hint="@string/culture"
                    android:layout_width="match_parent" />
            </android.support.design.widget.TextInputLayout>

            <Button
        android:text="@string/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSearch"
         />

            </LinearLayout>

    </ScrollView>

</LinearLayout>